Aggiunta variabile "btnGenerator"

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <!-- bottoni -->
                     <button class="btn-generator" type="button">Genera</button>
-                    <button class="btn-generator" type="button">Annulla</button>
+                    <button class="cancel" type="button">Annulla</button>
         <!-- /bottoni -->
 
                 </form>
