--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <!-- main -->
     <div class="container">
         <h1>CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
-        <div>
             <form action="">
                 <div class="row">
         <!-- primo input -->
@@ -46,7 +45,35 @@
         <!-- /bottoni -->
 
             </form>
+        <h1>IL TUO BIGLIETTO</h1>
+        <div>
+            <h4>DETTAGLIO PASSEGGERI</h4>
+            <div class="row">
+                <div class="col-small">
+                    <h4>NOME PASSEGGERO</h4>
+                    <span></span>
+                </div>
+                <div class="col-big">
+                    <div class="column">
+                        <h6>Offerta</h6>
+                        <span></span>
+                    </div>
+                    <div class="column">
+                        <h6>Carrozza</h6>
+                        <span></span>
+                    </div>
+                    <div class="column">
+                        <h6>Codice CP</h6>
+                        <span></span>
+                    </div>
+                    <div class="column">
+                        <h6>Costo Biglietto</h6>
+                        <span></span>
+                    </div>
+                </div>
+            </div>
         </div>
+
     </div>
     <!-- /main -->
 
