Aggiunto stile alla sezione "Tuo biglietto"

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
             </form>
         <h1>IL TUO BIGLIETTO</h1>
-        <div>
+        <div class="ticket d-none">
             <h4>DETTAGLIO PASSEGGERI</h4>
             <div class="row">
                 <div class="col-small">
@@ -73,7 +73,6 @@
                 </div>
             </div>
         </div>
-
     </div>
     <!-- /main -->
 
