--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <!-- bottoni -->
                     <button class="btn-generator" type="button">Genera</button>
-                    <button class="cancel" type="button">Annulla</button>
+                    <button class="btn-cancel" type="button">Annulla</button>
         <!-- /bottoni -->
 
             </form>
@@ -51,24 +51,24 @@
             <div class="row">
                 <div class="col-small">
                     <h4>NOME PASSEGGERO</h4>
-                    <span></span>
+                    <span class="nameSurname"></span>
                 </div>
                 <div class="col-big">
                     <div class="column">
                         <h6>Offerta</h6>
-                        <span></span>
+                        <span class="offer"></span>
                     </div>
                     <div class="column">
                         <h6>Carrozza</h6>
-                        <span></span>
+                        <span class="carriage"></span>
                     </div>
                     <div class="column">
                         <h6>Codice CP</h6>
-                        <span></span>
+                        <span class="cp-code"></span>
                     </div>
                     <div class="column">
                         <h6>Costo Biglietto</h6>
-                        <span></span>
+                        <span class="price"></span>
                     </div>
                 </div>
             </div>
