--- a/index.html
+++ b/index.html
@@ -8,43 +8,45 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <header>
+        <h1>Calcola il prezzo del tuo biglietto</h1>
+    </header>
     <!-- main -->
     <div class="container">
-        <h1>CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
-            <form action="">
-                <div class="row">
-        <!-- primo input -->
-                    <div class="col">
-                        <label for="Name">Nome e Cognome</label>
-                        <input type="text" name="name" id="name">
-                    </div>
-        <!-- /primo input -->
-
-        <!-- secondo input -->
-                    <div class="col">
-                        <label for="km">km da percorrere</label>
-                        <input type="text" name="km" id="km">
-                    </div>
-        <!-- /secondo input -->
-
-        <!-- select -->
-                    <div class="col">
-                        <label for="age">Fascia d'età</label>
-                        <select name="age" id="age">
-                            <option value="underage">minorenne</option>
-                            <option value="adult">maggiorenne</option>
-                            <option value="over65">over 65</option>
-                        </select>
-                    </div>
-        <!-- /select -->
+        <form action="">
+            <div class="row">
+    <!-- primo input -->
+                <div class="col">
+                    <label for="Name">Nome e Cognome</label>
+                    <input type="text" name="name" id="name">
                 </div>
+    <!-- /primo input -->
 
-        <!-- bottoni -->
-                    <button class="btn-generator" type="button">Genera</button>
-                    <button class="btn-cancel" type="button">Annulla</button>
-        <!-- /bottoni -->
+    <!-- secondo input -->
+                <div class="col">
+                    <label for="km">km da percorrere</label>
+                    <input type="text" name="km" id="km">
+                </div>
+    <!-- /secondo input -->
 
-            </form>
+    <!-- select -->
+                <div class="col">
+                    <label for="age">Fascia d'età</label>
+                    <select name="age" id="age">
+                        <option value="underage">minorenne</option>
+                        <option value="adult">maggiorenne</option>
+                        <option value="over65">over 65</option>
+                    </select>
+                </div>
+    <!-- /select -->
+            </div>
+
+    <!-- bottoni -->
+                <button class="btn-generator" type="button">Genera</button>
+                <button class="btn-cancel" type="button">Annulla</button>
+    <!-- /bottoni -->
+
+        </form>
         <h1>IL TUO BIGLIETTO</h1>
         <div class="ticket d-none">
             <h4>DETTAGLIO PASSEGGERI</h4>
